argocd/base/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls42
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /music
              subPath: music
            - name: media
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
