argocd/base/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: lidarr
          port: 8686
  tls: {}
